--- a/src/App/component/style.less
+++ b/src/App/component/style.less
@@ -78,5 +78,37 @@
                 margin: 10px;
             }
         }
+        .JoinRoomParent{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background: #cddc39;
+                text-align: center;
+                padding: 30px;
+                max-width: 800px;
+                max-height: 400px;
+                overflow: auto;
+                .JoinRoomBody{
+                    font-size: 72px;
+                }
+                .RoomHolder{
+                    .Room{
+                        min-width: 90px;
+                        min-height: 30px;
+                        line-height: 30px;
+                        margin: 10px;
+                        font-family: fantasy;
+                        font-size: 16px;
+                    }
+                }
+        }
     }
 }
+
+button:active {
+    outline: none;
+    border: none;
+    }
+    
+button:focus {outline:0;}
