--- a/src/App/component/style.less
+++ b/src/App/component/style.less
@@ -42,20 +42,18 @@
             text-align: center;
             padding: 30px;
             .CreateRoomBody{
-                font-size: 72px;
+                font-size: 60px;
             }
-            .CreateRoomBodyInput{
+            .CreateRoomBodyInput, .CreateRoomBodyInput1{
                 font-size: 18px;
                 text-align: center;
                 padding: 0px;
+                margin-bottom: 15px;
                 box-sizing: border-box;
                 font-family: fantasy;
             }
             .buttonHolder{
                 font-size: 24px;
-                .Title{
-                    margin-top: 15px;
-                }
                 .player{
                     min-width: 30px;
                     height: 30px;
@@ -85,21 +83,24 @@
                 transform: translate(-50%, -50%);
                 background: #cddc39;
                 text-align: center;
-                padding: 30px;
-                max-width: 800px;
-                max-height: 400px;
-                overflow: auto;
+                padding: 20px;
+                width: 850px;
+                height: 450px;
                 .JoinRoomBody{
                     font-size: 72px;
                 }
                 .RoomHolder{
+                    width: 100%;
+                    height: 350px;
+                    overflow: auto;
                     .Room{
                         min-width: 90px;
+                        border: 1px solid grey;
                         min-height: 30px;
-                        line-height: 30px;
                         margin: 10px;
                         font-family: fantasy;
-                        font-size: 16px;
+                        font-size: 24px;
+                        box-shadow: 0px 0px 10px grey;
                     }
                 }
         }
@@ -112,3 +113,33 @@ button:active {
     }
     
 button:focus {outline:0;}
+
+.loader{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 30px;
+    max-width: 800px;
+    max-height: 600px;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+.playerData{
+    width: 100px;
+    font-size: 32px;
+    border-radius: 50%;
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
+    display: inline-block;
+    margin: 10px;
+}
